Updated to Version 4

--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
+<!-- SLONDR.CO.NF VERSION 4
+     or, "The Non-Meme One" -->
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8"/>
-    <title>I am a website Morty. I am Websiterick!</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Eric S. Londres</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet"> 
+    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
-    <div class="container">
-      <div class="item">donate some ethereum to me at 0x645006da2ce7f82273eaa293c331ec6621d033cf thanks</div>
-      <div class="item">Follow me on twitter <tt>@slondrex</tt></div>
-      <div class="item">number of consecutive <tt>)</tt>s at the end of my last lisp program: 5     (last updated 2018-05-01)</div>
-      <div class="item"><a href="/burger"><font size="7">🍔</font></a></div>
-    </div>
+    <h1>Eric S. Londres</h1>
+    <a href="https://github.com/slondr">GitHub</a> <br>
+    <a href="mailto:ericlondres@protonmail.com">Email</a><br>
+    <a href="/pubkey">Public Key</a><br>
+    <a href="/burger/play.html">Burger</a>
   </body>
 </html>
