Added instagram link

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
   <body>
     <h1>Eric S. Londres</h1>
     <a href="https://github.com/slondr">GitHub</a> <br>
-    <a href="https://gitlab.com/slondr">Gitlab</a> <br>
+    <a href="https://gitlab.com/slondr">GitLab</a> <br>
     <a href="mailto:ericlondres@protonmail.com">Email</a><br>
     <a href="/pubkey">Public Key</a><br>
+    <a href="https://www.instagram.com/slondr">Instagram</a> <br>
     <a href="/burger/play.html">Burger</a>
   </body>
 </html>
