Added GPL notice and updated terminology

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,22 @@
-<!-- SLONDR.CO.NF VERSION 4
-     or, "The Non-Meme One" -->
+<!--
+    This is the index file of SLONDR.TK, also known as slondr.github.io.
+    It descends from Version 4 of SLONDR.CO.NF, which moved to its current
+        dual-hosting setup on 4 August 2018.
+     
+    slondr.github.io is free software: you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.
+
+    Foobar is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+
+    You should have received a copy of the GNU General Public License
+    along with slondr.co.nf.  If not, see <https://www.gnu.org/licenses/>.
+-->
+
 <!DOCTYPE html>
 <html>
   <head>
