--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,6 @@
     <a href="https://github.com/slondr">GitHub</a> <br>
     <a href="mailto:ericlondres@protonmail.com">Email</a><br>
     <a href="/pubkey">Public Key</a><br>
-    <a href="/burger/play.html">Burger</a>
+    <a href="/Burger/play.html">Burger</a>
   </body>
 </html>
