Updated font size and added GPL link

--- a/public/index.html
+++ b/public/index.html
@@ -34,5 +34,6 @@
     <a href="mailto:ericlondres@protonmail.com">Email</a><br>
     <a href="/pubkey">Public Key</a><br>
     <a href="/Burger/play.html">Burger</a>
+    <a href="/gpl.txt">GNU GPL</a>
   </body>
 </html>
