Fixed line break

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
     <a href="https://github.com/slondr">GitHub</a> <br>
     <a href="mailto:ericlondres@protonmail.com">Email</a><br>
     <a href="/pubkey">Public Key</a><br>
-    <a href="/Burger/play.html">Burger</a>
-    <a href="/gpl.txt">GNU GPL</a>
+    <a href="/Burger/play.html">Burger</a><br>
+    <a href="/gpl.txt">GNU GPL</a><br>
   </body>
 </html>
