Removed Google API and added copyright notice.

--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,6 @@
     <title>Eric S. Londres</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
-    
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
@@ -35,5 +33,7 @@
     <a href="/pubkey">Public Key</a><br>
     <a href="/Burger/play.html">Burger</a><br>
     <a href="/gpl.txt">GNU GPL</a><br>
+
+    <div>Most of this site is licensed under the terms of the GNU GPLv3. To view the full source code, see https://gitlab.com/slondr/slondr.gitlab.io</div>
   </body>
 </html>
