--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     GNU General Public License for more details.
 
     You should have received a copy of the GNU General Public License
-    along with slondr.co.nf.  If not, see <https://www.gnu.org/licenses/>.
+    along with slondr.gitlab.io.  If not, see <https://www.gnu.org/licenses/>.
 -->
 
 <!DOCTYPE html>
