--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
   <head>
     <title>Eric S. Londres</title>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
