--- a/public/index.html
+++ b/public/index.html
@@ -30,9 +30,11 @@
     <a class="element" href="https://gitlab.com/slondr">GitLab</a><br>
     <a class="element" href="https://github.com/slondr">GitHub</a><br>
     <a class="element" href="mailto:ericlondres@protonmail.com">Email</a><br>
+    <a class="element" href="https://www.youtube.com/watch?v=WoF7V-8UiwU">Dog</a><br>
     <a class="element" href="/pubkey">Public Key</a><br>
     <a class="element" href="/Burger/play.html">Burger</a><br>
     <a class="element" href="/gpl.txt">GNU GPL</a><br>
+
 
     <div class="footer highlight">Most of this site is licensed under the terms of the GNU GPLv3. To view the full source code, <a href="https://gitlab.com/slondr/slondr.gitlab.io">click here</a>.
     </div>
