Changed email address

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
       <div class="container">
 	<a class="element" href="https://gitlab.com/slondr">GitLab</a>
 	<a class="element" href="https://github.com/slondr">GitHub</a>
-	<a class="element" href="mailto:ericlondres@protonmail.com">Email</a>
+	<a class="element" href="mailto:ericlondres@outlook.com">Email</a>
 	<a class="element" href="https://www.youtube.com/watch?v=WoF7V-8UiwU">Dog</a>
 	<a class="element" href="/pubkey">Public Key</a>
 	<a class="element" href="/Burger/play.html">Burger</a>
