--- a/public/index.html
+++ b/public/index.html
@@ -29,8 +29,9 @@
       <div class="container">
 	<a class="element" href="https://gitlab.com/slondr">GitLab</a>
 	<a class="element" href="https://github.com/slondr">GitHub</a>
+	<a class="element" href="https://www.linkedin.com/in/eric-londres-153239171/">LinkedIn</a>
 	<a class="element" href="mailto:ericlondres@outlook.com">Email</a>
-	<a class="element" href="https://www.youtube.com/watch?v=WoF7V-8UiwU">Dog</a>
+	<a class="element" href="https://www.youtube.com/channel/UC5o62RNnvTBYlFZhJVmV0XQ">YouTube</a>
 	<a class="element" href="/pubkey">Public Key</a>
 	<a class="element" href="/Burger/play.html">Burger</a>
 	<a class="element" href="/gpl.txt">GNU GPL</a>
