updated commend in index.html to reflect new domains

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,8 @@
 <!--
-    This is the index file of SLONDR.TK, also known as slondr.github.io.
+    This is the index file of SLONDR.ML, also known as slondr.github.io.
     It descends from Version 4 of SLONDR.CO.NF, which moved to its current
-    dual-hosting setup on 4 August 2018.
+    dual-hosting setup on 4 August 2018. It was public-facing at slondr.tk 
+    until 11 December 2018, when the domain name was changed to slondr.ml.
     
     slondr.github.io is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
