added twitch.tv link

--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
 	<a class="element" href="https://www.youtube.com/channel/UC5o62RNnvTBYlFZhJVmV0XQ">YouTube</a>
 	<a class="element" href="/pubkey">Public Key</a>
 	<a class="element" href="/Burger/play.html">Burger</a>
+	<a class="element" href="https://www.twitch.tv/slondr">Twitch</a>
 	<a class="element" href="/gpl.txt">GNU GPL</a>
       </div>
       <div class="footer">
