--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,6 @@
+---
+# Compile with Jekyll
+---
 <!--
     This is the index file of SLONDR.ML, also known as slondr.github.io.
     It descends from Version 4 of SLONDR.CO.NF, which moved to its current
