--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
 
 <p>I'm an undergraduate student at Stevens Institute of Technology and  <a href="https://github.com/slondr">a programmer by trade</a>. I also enjoy <a href="https://www.youtube.com/channel/UC5o62RNnvTBYlFZhJVmV0XQ">making videos</a> in my spare time, as well as <a href="https://www.twitch.tv/slondr">gaming</a>.</p>
 
-<p>I currently hold the position of Director of Deliverables for <a href="https://www.sittv.org">SITTV</a>, <a href="https://www.youtube.com/SITTV">Stevens's  television station</a>. I also occasionaly write and edit articles for <a href="http://thestute.com/">The Stute</a>, Stevens's newspaper. I'm also a member of the Alpha Phi Omega national service fraternity's Theta Alpha chapter, where I presently serve as Webmaster.</p>
+<p>I currently hold the position of Director of Deliverables for <a href="https://www.sittv.org">SITTV</a>, <a href="https://www.youtube.com/SITTV">Stevens's  television station</a>. I occasionaly write and edit articles for <a href="http://thestute.com/">The Stute</a>, Stevens's newspaper. I'm also a member of the Alpha Phi Omega national service fraternity's <a href="https://apota.org/">Theta Alpha chapter</a>, where I presently serve as Webmaster.</p>
 
 <p>If you'd like to get in contact with me, <a href="mailto:ericlondres@outlook.com">shoot me an email</a> or hit me up on <a href="https://www.linkedin.com/in/eric-londres-153239171/">LinkedIn</a>. I'm usually more responsive to the former. If you'd like to send me an encrypted email, you can find my public key <a href="/pubkey">here</a>.</p>
 
