--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
 
 <h1>I'm Eric S. Londres.</h1>
 
-<p>I'm an undergraduate student at Stevens Institute of Technology and  <a href="https://github.com/slondr">a programmer by trade</a>. I also enjoy <a href="https://www.youtube.com/channel/UC5o62RNnvTBYlFZhJVmV0XQ">making videos</a> in my spare time, as well as <a href="https://www.twitch.tv/slondr">gaming</a>.</p>
+<p>I'm an undergraduate student at Stevens Institute of Technology and  <a href="https://gitlab.com/slondr">a programmer by trade</a>. I also enjoy <a href="https://www.youtube.com/channel/UC5o62RNnvTBYlFZhJVmV0XQ">making videos</a> in my spare time, as well as <a href="https://www.twitch.tv/slondr">gaming</a>.</p>
 
 <p>I currently hold the position of Director of Deliverables for <a href="https://www.sittv.org">SITTV</a>, <a href="https://www.youtube.com/SITTV">Stevens's  television station</a>. I occasionaly write and edit articles for <a href="http://thestute.com/">The Stute</a>, Stevens's newspaper. I'm also a member of the Alpha Phi Omega national service fraternity's <a href="https://apota.org/">Theta Alpha chapter</a>, where I presently serve as Webmaster.</p>
 
