--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@ layout: default
 
 <p>I somewhat maintain <a href="/blog">a blog</a> on this website, where I periodically post about technology or anything that crosses my mind.</p>
 
-<p>I've also dabbled in game development. Right from this website, you can play <a href="/Burger">a text-adventure game about Stevens</a> that I wrote (but forgot to submit) for a Game Jam in 2017. It was never fully finished, but is technically playable from intro to credits. I completed a much smaller, yet fully finished, spiritual successor for a similar Game Jam in 2019, which you can play <a href="/Sleep">here</a>.</p>
+<p>I've also dabbled in game development. Right from this website, you can play <a href="/Burger">a text-based adventure game about Stevens</a> that I wrote (but forgot to submit) for a Game Jam in 2017. It was never fully finished, but is technically playable from intro to credits. I completed a much smaller, yet fully finished, spiritual successor for a similar Game Jam in 2019, which you can play <a href="/Sleep">here</a>.</p>
 
 <p>If you'd like to get in contact with me, <a href="mailto:ericlondres@outlook.com">shoot me an email</a> or hit me up on <a href="https://www.linkedin.com/in/eric-londres-153239171/">LinkedIn</a>. I'm usually more responsive to the former. If you'd like to send me an encrypted email, you can find my public key <a href="/pubkey">here</a>.</p>
