converted list to org mode format

--- a/src/favorites.html
+++ b/src/favorites.html
@@ -1,90 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Eric S. Londres</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css"/>
-  </head>
-  <body>
-    <nav>
-      
-      <p><a href="/">home</a>
+<head>
+<title>Eric S. Londres</title>
+<link rel="stylesheet" type="text/css" href="css/style.css"/>
+</head>
+<body>
+<nav>
+
+<p><a href="/">home</a>
 <a href="/games/">games</a>
 <a href="/blog/">blog</a>
 <a href="/publications/">publications</a></p>
 
-    </nav>
-    <main>
-      <iframe src="https://duckduckgo.com/search.html?bgcolor=272822&amp;focus=yes" style="overflow:hidden;margin:0;padding:0;max-width:900px;height:60px;" frameborder="0">
+</nav>
+<main>
+<iframe src="https://duckduckgo.com/search.html?bgcolor=272822&amp;focus=yes" style="overflow:hidden;margin:0;padding:0;max-width:900px;height:60px;" frameborder="0">
 </iframe>
 
-<ul>
-  <li>
-    <p><a href="https://my.stevens.edu/">MyStevens</a></p>
-  </li>
-  <li>
-    <p><a href="https://todoist.com/app">Todoist</a></p>
-  </li>
-  <li>
-    <p><a href="https://web.stevens.edu/peoplefinder/">People finder</a></p>
-  </li>
-  <li>
-    <p><a href="https://sit.instructure.com/">Canvas</a></p>
-  </li>
-  <li>
-    <p><a href="https://wd5.myworkday.com/stevens">Workday</a></p>
-  </li>
-  <li>
-    <p><a href="https://ducklink.stevens.edu/">DuckLink</a></p>
-  </li>
-  <li>
-    <p><a href="https://emsweb.stevens.edu/VirtualEMS/">Virtual EMS</a></p>
-  </li>
-  <li>
-    <p><a href="https://messages.google.com/web/">Google Messages</a></p>
-  </li>
-  <li>
-    <p><a href="http://stevens.e-cater.com/default.php">Stevens Catering</a></p>
-  </li>
-  <li>
-    <p><a href="https://youtube.com">YouTube</a></p>
-  </li>
-  <li>
-    <p><a href="https://apota.org/">Alpha Phi Omega — Theta Alpha</a></p>
-  </li>
-  <li>
-    <p><a href="https://sit.teamdynamix.com/TDNext/Home/Desktop/Default.aspx">TeamDynamix</a></p>
-  </li>
-  <li>
-    <p><a href="https://web.groupme.com/chats">GroupMe</a></p>
-  </li>
-  <li>
-    <p><a href="https://kek.gg/">kek.gg</a></p>
-  </li>
-  <li>
-    <p><a href="https://rechneronline.de/musik/interval.php">Interval Calculator</a></p>
-  </li>
-  <li>
-    <p><a href="http://www.donaldsonworkshop.com/baraboo/songwriting/songwriting.html">Writing Songs that Don’t Suck</a></p>
-  </li>
-  <li>
-    <p><a href="https://www.guitar-chords.org.uk/c-major-chord.html">Guitar Chords</a></p>
-  </li>
-  <li>
-    <p><a href="http://127.0.0.1:43110/1PLAYgDQboKojowD3kwdb3CtWmWaokXvfp">Play</a></p>
-  </li>
-</ul>
++[["https://my.stevens.edu/][MyStevens]]
++[[https://todoist.com/app][Todoist]]
++[[https://web.stevens.edu/peoplefinder/][People finder]]
++[[Canvas]]
++[[https://wd5.myworkday.com/stevens][Workday]]
++[[https://ducklink.stevens.edu/][DuckLink]]
++[[https://emsweb.stevens.edu/VirtualEMS/][Virtual EMS]]
++[[https://messages.google.com/web/][Google Messages]]
++[[http://stevens.e-cater.com/default.php][Stevens Catering]]
++[[https://youtube.com][YouTube]]
++[[https://apota.org/][Alpha Phi Omega — Theta Alpha]]
++[[https://sit.teamdynamix.com/TDNext/Home/Desktop/Default.aspx][TeamDynamix]]
++[[https://web.groupme.com/chats][GroupMe]]
++[[https://kek.gg/][kek.gg]]
++[[https://rechneronline.de/musik/interval.php][Interval Calculator]]
++[[http://www.donaldsonworkshop.com/baraboo/songwriting/songwriting.html][Writing Songs that Don’t Suck]]
++[[https://www.guitar-chords.org.uk/c-major-chord.html][Guitar Chords]]
++[[http://127.0.0.1:43110/1PLAYgDQboKojowD3kwdb3CtWmWaokXvfp][Play]]
 
 <div id="cont_d59b9658b0ffc396f7f7cbb6f0de78ca">
-	<script type="text/javascript" async="" src="https://www.theweather.com/wid_loader/d59b9658b0ffc396f7f7cbb6f0de78ca"></script>
+<script type="text/javascript" async="" src="https://www.theweather.com/wid_loader/d59b9658b0ffc396f7f7cbb6f0de78ca"></script>
 </div>
 
-    </main>
-    <footer>
-      
-      <hr />
+</main>
+<footer>
+
+<hr />
 <p>© 2019 Eric S. Londres. This website is licensed under the terms of the <a href="/GPL">GNU GPL</a>. You can view the source code <a href="https://gitlab.com/slondr/slondr.gitlab.io">here</a>.</p>
 
-    </footer>
-  </body>
+</footer>
+</body>
 </html>
 
