some html actually now fuckinnnnnnnnnn workd

--- a/src/favorites.html
+++ b/src/favorites.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2019-07-21 Sun 18:02 -->
+<!-- 2019-07-21 Sun 18:22 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -228,33 +228,24 @@ for the JavaScript code in this tag.
 </head>
 <body>
 <div id="content">
-<div class="HTML">
-<p>
-&lt;!DOCTYPE html&gt;
-&lt;html lang="en"&gt;
-&lt;head&gt;
-&lt;title&gt;Eric S. Londres&lt;/title&gt;
-&lt;link rel="stylesheet" type="text/css" href="css/style.css"/&gt;
-&lt;/head&gt;
-&lt;body&gt;
-&lt;nav&gt;
-</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<title>Eric S. Londres</title>
+<link rel="stylesheet" type="text/css" href="css/style.css"/>
+</head>
+<body>
+<nav>
 
-<p>
-&lt;p&gt;&lt;a href="<i>"&gt;home&lt;/a&gt;
-&lt;a href="/games</i>"&gt;games&lt;/a&gt;
-&lt;a href="<i>blog</i>"&gt;blog&lt;/a&gt;
-&lt;a href="<i>publications</i>"&gt;publications&lt;/a&gt;&lt;/p&gt;
-</p>
+<p><a href="/">home</a>
+<a href="/games/">games</a>
+<a href="/blog/">blog</a>
+<a href="/publications/">publications</a></p>
 
-<p>
-&lt;/nav&gt;
-&lt;main&gt;
-&lt;iframe src="<a href="https://duckduckgo.com/search.html?bgcolor=272822&amp;amp;focus=yes">https://duckduckgo.com/search.html?bgcolor=272822&amp;amp;focus=yes</a>" style="overflow:hidden;margin:0;padding:0;max-width:900px;height:60px;" frameborder="0"&gt;
-&lt;/iframe&gt;
-</p>
-
-</div>
+</nav>
+<main>
+<iframe src="https://duckduckgo.com/search.html?bgcolor=272822&amp;focus=yes" style="overflow:hidden;margin:0;padding:0;max-width:900px;height:60px;" frameborder="0">
+</iframe>
 
 <p>
 +<a href="https://my.stevens.edu/">MyStevens</a>
@@ -277,33 +268,22 @@ for the JavaScript code in this tag.
 +<a href="http://127.0.0.1:43110/1PLAYgDQboKojowD3kwdb3CtWmWaokXvfp">Play</a>
 </p>
 
-<div class="HTML">
-<p>
-&lt;div id="cont<sub>d59b9658b0ffc396f7f7cbb6f0de78ca</sub>"&gt;
-&lt;script type="text/javascript" async="" src="<a href="https://www.theweather.com/wid_loader/d59b9658b0ffc396f7f7cbb6f0de78ca">https://www.theweather.com/wid_loader/d59b9658b0ffc396f7f7cbb6f0de78ca</a>"&gt;&lt;/script&gt;
-&lt;/div&gt;
-</p>
-
-<p>
-&lt;/main&gt;
-&lt;footer&gt;
-</p>
-
-<p>
-&lt;hr /&gt;
-&lt;p&gt;© 2019 Eric S. Londres. This website is licensed under the terms of the &lt;a href="/GPL"&gt;GNU GPL&lt;/a&gt;. You can view the source code &lt;a href="<a href="https://gitlab.com/slondr/slondr.gitlab.io">https://gitlab.com/slondr/slondr.gitlab.io</a>"&gt;here&lt;/a&gt;.&lt;/p&gt;
-</p>
-
-<p>
-&lt;/footer&gt;
-&lt;/body&gt;
-&lt;/html&gt;
-</p>
-
+<div id="cont_d59b9658b0ffc396f7f7cbb6f0de78ca">
+<script type="text/javascript" async="" src="https://www.theweather.com/wid_loader/d59b9658b0ffc396f7f7cbb6f0de78ca"></script>
 </div>
+
+</main>
+<footer>
+
+<hr />
+<p>© 2019 Eric S. Londres. This website is licensed under the terms of the <a href="/GPL">GNU GPL</a>. You can view the source code <a href="https://gitlab.com/slondr/slondr.gitlab.io">here</a>.</p>
+
+</footer>
+</body>
+</html>
 </div>
 <div id="postamble" class="status">
-<p class="date">Created: 2019-07-21 Sun 18:02</p>
+<p class="date">Created: 2019-07-21 Sun 18:22</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
