--- a/src/favorites.html
+++ b/src/favorites.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2019-07-21 Sun 18:26 -->
+<!-- 2019-07-21 Sun 18:32 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -239,8 +239,6 @@ for the JavaScript code in this tag.
 
 <p><a href="/">home</a>
 <a href="/games/">games</a>
-<a href="/blog/">blog</a>
-<a href="/publications/">publications</a></p>
 
 </nav>
 <main>
@@ -248,25 +246,28 @@ for the JavaScript code in this tag.
 </iframe>
 
 <ul class="org-ul">
+<li><a href="https://gitlab.com/slondr">GitLab</a></li>
 <li><a href="https://my.stevens.edu/">MyStevens</a></li>
 <li><a href="https://todoist.com/app">Todoist</a></li>
 <li><a href="https://web.stevens.edu/peoplefinder/">People finder</a></li>
 <li><a href="https://sit.instructure.com/">Canvas</a></li>
+<li><a href="https://apota.org/">Alpha Phi Omega — Theta Alpha</a></li>
 <li><a href="https://wd5.myworkday.com/stevens">Workday</a></li>
+<li><a href="https://youtube.com">YouTube</a></li>
 <li><a href="https://ducklink.stevens.edu/">DuckLink</a></li>
 <li><a href="https://emsweb.stevens.edu/VirtualEMS/">Virtual EMS</a></li>
 <li><a href="https://messages.google.com/web/">Google Messages</a></li>
-<li><a href="http://stevens.e-cater.com/default.php">Stevens Catering</a></li>
-<li><a href="https://youtube.com">YouTube</a></li>
-<li><a href="https://apota.org/">Alpha Phi Omega — Theta Alpha</a></li>
-<li><a href="https://sit.teamdynamix.com/TDNext/Home/Desktop/Default.aspx">TeamDynamix</a></li>
+<li><a href="http://127.0.0.1:43110/1PLAYgDQboKojowD3kwdb3CtWmWaokXvfp">Play</a></li>
 <li><a href="https://web.groupme.com/chats">GroupMe</a></li>
+<li><a href="http://stevens.e-cater.com/default.php">Stevens Catering</a></li>
+<li><a href="https://github.com/slondr">GitHub</a></li>
+<li><a href="https://sit.teamdynamix.com/TDNext/Home/Desktop/Default.aspx">TeamDynamix</a></li>
 <li><a href="https://kek.gg/">kek.gg</a></li>
 <li><a href="https://rechneronline.de/musik/interval.php">Interval Calculator</a></li>
 <li><a href="http://www.donaldsonworkshop.com/baraboo/songwriting/songwriting.html">Writing Songs that Don’t Suck</a></li>
 <li><a href="https://www.guitar-chords.org.uk/c-major-chord.html">Guitar Chords</a></li>
-<li><a href="http://127.0.0.1:43110/1PLAYgDQboKojowD3kwdb3CtWmWaokXvfp">Play</a></li>
 </ul>
+
 
 <div id="cont_d59b9658b0ffc396f7f7cbb6f0de78ca">
 <script type="text/javascript" async="" src="https://www.theweather.com/wid_loader/d59b9658b0ffc396f7f7cbb6f0de78ca"></script>
@@ -283,7 +284,7 @@ for the JavaScript code in this tag.
 </html>
 </div>
 <div id="postamble" class="status">
-<p class="date">Created: 2019-07-21 Sun 18:26</p>
+<p class="date">Created: 2019-07-21 Sun 18:32</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
