--- a/src/favorites.html
+++ b/src/favorites.html
@@ -181,7 +181,7 @@
 </style>
 <script src="https://www.gstatic.com/firebasejs/6.3.1/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/6.3.1/firebase-firestore.js"></script>
-<script async type='module' src='./favorites.js'></script>
+<script async type='module' src='./index.js'></script>
 <script type="text/javascript">
 /*
 @licstart  The following is the entire license notice for the
