--- a/src/favorites.html
+++ b/src/favorites.html
@@ -179,9 +179,7 @@
  .org-svg { width: 90%; }
  /*]]>*/-->
 </style>
-<script src="https://www.gstatic.com/firebasejs/6.3.1/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/6.3.1/firebase-firestore.js"></script>
-<script async type='module' src='./index.js'></script>
+<script async src='./index.js'></script>
 <script type="text/javascript">
 /*
 @licstart  The following is the entire license notice for the
