Convert from XHTML to HTML5

--- a/src/favorites.html
+++ b/src/favorites.html
@@ -1,7 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-	  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+<!DOCTYPE html>
+<html lang="en">
     <head>
 	<!-- 2019-07-21 Sun 18:32 -->
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
@@ -283,10 +281,6 @@
 		    </footer>
 		</body>
 	    </html>
-	</div>
-	<div id="postamble" class="status">
-	    <p class="date">Created: 2019-07-21 Sun 18:32</p>
-	    <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 	</div>
     </body>
 </html>
