Fixed broken HTML tag

--- a/src/favorites.html
+++ b/src/favorites.html
@@ -12,10 +12,8 @@
 	<div id="content">
 	    <body>
 		<nav>
-		    
-		    <p><a href="/">home</a>
-			<a href="/games/">games</a>
-			
+		    <a href="/">home</a>
+		    <a href="/games/">games</a>	
 		</nav>
 		<main>
 		    <iframe src="https://duckduckgo.com/search.html?bgcolor=272822&amp;focus=yes" style="overflow:hidden;margin:0;padding:0;max-width:900px;height:60px;" frameborder="0">
