changed up footer to make it more compact

--- a/src/favorites.html
+++ b/src/favorites.html
@@ -46,7 +46,7 @@
 	    </main>
 	    <footer>
 		<hr />
-		<p>© 2019 Eric S. Londres. This website is licensed under the terms of the <a href="/GPL">GNU GPL</a>. You can view the source code <a href="https://gitlab.com/slondr/slondr.gitlab.io">here</a>.</p>
+		<p>© 2019 Eric S. Londres. You can view this website's source code <a href="https://gitlab.com/slondr/slondr.gitlab.io">here</a>.</p>
 	    </footer>
 	</div>
     </body>
