--- a/src/favorites.html
+++ b/src/favorites.html
@@ -38,7 +38,7 @@
 		    <li><a class="favorite" id="songs" href="http://www.donaldsonworkshop.com/baraboo/songwriting/songwriting.html">Writing Songs that Don’t Suck</a></li>
 		    <li><a class="favorite" id="chords" href="https://www.guitar-chords.org.uk/c-major-chord.html">Guitar Chords</a></li>
 		</ul>
-		<div id="cont_d59b9658b0ffc396f7f7cbb6f0de78ca">
+		<div class="weather" id="cont_d59b9658b0ffc396f7f7cbb6f0de78ca">
 		    <script type="text/javascript" async="" src="https://www.theweather.com/wid_loader/d59b9658b0ffc396f7f7cbb6f0de78ca"></script>
 		</div>
 	    </main>
