--- a/src/favorites.html
+++ b/src/favorites.html
@@ -3,6 +3,7 @@
     <head>
 	<title>Favorites</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css"/>
+	<link rel="stylesheet" type="text/css" href="css/favorites.css"/>
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<script async src='./index.js'></script>
