--- a/src/favorites.html
+++ b/src/favorites.html
@@ -15,8 +15,7 @@
 		<a href="/games/">games</a>	
 	    </nav>
 	    <main>
-		<iframe src="https://duckduckgo.com/search.html?bgcolor=272822&amp;focus=yes" style="overflow:hidden;margin:0;padding:0;max-width:900px;height:60px;" frameborder="0">
-		</iframe>
+		<iframe src="https://duckduckgo.com/search.html?bgcolor=272822&amp;focus=yes" style="overflow:hidden;margin:0;padding:0;max-width:900px;height:60px;" frameborder="0"></iframe>
 		<ul class="org-ul">
 		  <li><a class="favorite" id="gitlab" href="https://gitlab.com/slondr">GitLab</a></li>		   
 		  <li><a class="favorite" id="github" href="https://github.com/slondr">GitHub</a></li>
