--- a/src/favorites.html
+++ b/src/favorites.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="css/favorites.css"/>
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<script async src='./index.js'></script>
+	<script async src='/index.js'></script>
     </head>
     <body>
 	<div id="content">
