Added StackExchange link to favorites page

--- a/src/favorites.html
+++ b/src/favorites.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
     <head>
 	<title>Favorites</title>
@@ -26,6 +26,7 @@
 		  <li><a class="favorite" id="googlemessages" href="https://messages.google.com/web/">Google Messages</a></li>
 		  <li><a class="favorite" id="peoplefinder" href="https://web.stevens.edu/peoplefinder/">People finder</a></li>
 		  <li><a class="favorite" id="canvas" href="https://sit.instructure.com/">Canvas</a></li>
+          <li><a class="favorite" id="stackexchange" href="https://stackexchange.com/">StackExchange</a></li>
 		  <li><a class="favorite" id="workday" href="https://wd5.myworkday.com/stevens">Workday</a></li>		    
 		  <li><a class="favorite" id="ducklink" href="https://ducklink.stevens.edu/">DuckLink</a></li>
 		  <li><a class="favorite" id="virtualems" href="https://emsweb.stevens.edu/VirtualEMS/">Virtual EMS</a></li>
