--- a/src/favorites.html
+++ b/src/favorites.html
@@ -18,7 +18,7 @@
 		<iframe src="https://duckduckgo.com/search.html?bgcolor=272822&amp;focus=yes" style="overflow:hidden;margin:0;padding:0;max-width:900px;height:60px;" frameborder="0"></iframe>
 		<ul class="org-ul">
                     <li><a class="favorite" id="gitlab" href="https://gitlab.com/slondr">GitLab</a></li>
-                    <li><a class="favorite" id="github" href="https://github.com/slondr">GitHub</a></li>
+                    <li><a class="favorite" id="github" href="https://github.com/">GitHub</a></li>
                     <li><a class="favorite" id="mystevens" href="https://my.stevens.edu/">MyStevens</a></li>
                     <li><a class="favorite" id="apota" href="https://apota.org/">Alpha Phi Omega — Theta Alpha</a></li>
                     <li><a class="favorite" id="todoist" href="https://todoist.com/app">Todoist</a></li>
