--- a/src/favorites.html
+++ b/src/favorites.html
@@ -20,9 +20,9 @@
           <li><a class="favorite" id="gitlab" href="https://gitlab.com/slondr">GitLab</a></li>
           <li><a class="favorite" id="github" href="https://github.com/">GitHub</a></li>
           <li><a class="favorite" id="mystevens" href="https://my.stevens.edu/">MyStevens</a></li>
-          <li><a class="favorite" id="apota" href="https://apota.org/">Alpha Phi Omega — Theta Alpha</a></li>
+          <li><a class="favorite" id="apota" href="https://apota.org/">Theta Alpha</a></li>
           <li><a class="favorite" id="todoist" href="https://todoist.com/app">Todoist</a></li>
-          <li><a class="favorite" id="googlemessages" href="https://messages.google.com/web/">Google Messages</a></li>
+          <li><a class="favorite" id="googlemessages" href="https://messages.google.com/web/">Messages</a></li>
 	  <li><a class="favorite" id="youtube" href="https://youtube.com">YouTube</a></li>
 	  <li><a class="favorite" id="peoplefinder" href="https://web.stevens.edu/peoplefinder/">People finder</a></li>
           <li><a class="favorite" id="canvas" href="https://sit.instructure.com/">Canvas</a></li>
@@ -32,11 +32,11 @@
           <li><a class="favorite" id="virtualems" href="https://emsweb.stevens.edu/VirtualEMS/">Virtual EMS</a></li>
           <li><a class="favorite" id="play" href="http://127.0.0.1:43110/1PLAYgDQboKojowD3kwdb3CtWmWaokXvfp">Play</a></li>
           <li><a class="favorite" id="groupme" href="https://web.groupme.com/chats">GroupMe</a></li>
-          <li><a class="favorite" id="catering" href="http://stevens.e-cater.com/default.php">Stevens Catering</a></li>
+          <li><a class="favorite" id="catering" href="http://stevens.e-cater.com/default.php">Catering</a></li>
           <li><a class="favorite" id="teamdynamix" href="https://sit.teamdynamix.com/TDNext/Home/Desktop/Default.aspx">TeamDynamix</a></li>
           <li><a class="favorite" id="kek" href="https://kek.gg/">kek.gg</a></li>
-          <li><a class="favorite" id="intervalcalculator" href="https://rechneronline.de/musik/interval.php">Interval Calculator</a></li>
-          <li><a class="favorite" id="songs" href="http://www.donaldsonworkshop.com/baraboo/songwriting/songwriting.html">Writing Songs that Don’t Suck</a></li>
+          <li><a class="favorite" id="intervalcalculator" href="https://rechneronline.de/musik/interval.php">Intervals</a></li>
+          <li><a class="favorite" id="songs" href="http://www.donaldsonworkshop.com/baraboo/songwriting/songwriting.html">Writing Songs</a></li>
           <li><a class="favorite" id="chords" href="https://www.guitar-chords.org.uk/c-major-chord.html">Guitar Chords</a></li>
         </ul>
         <div class="weather" id="cont_d59b9658b0ffc396f7f7cbb6f0de78ca">
