--- a/src/favorites.html
+++ b/src/favorites.html
@@ -5,15 +5,11 @@
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" type="text/css" href="css/favorites.css" />
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <script async src='/index.js'></script>
   </head>
   <body>
     <div id="content">
-      <nav>
-        <a href="/">home</a>
-        <a href="/games/">games</a>
-      </nav>
       <main>
         <iframe src="https://duckduckgo.com/search.html?bgcolor=272822&amp;focus=yes" style="overflow:hidden;margin:0;padding:0;max-width:900px;height:60px;" frameborder="0"></iframe>
         <ul class="org-ul">
