--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
     <head>
 	<title>Eric S. Londres</title>
 	<link rel="stylesheet" type="text/css" href="index.css"/>
+	<script src="https://kit.fontawesome.com/2fdf42f009.js" crossorigin="anonymous"></script>
     </head>
     <body>
 	<h1><span id="first-name">Eric</span> <span id="last-name">Londres</span></h1>
