Added gitlab link

--- a/public/index.html
+++ b/public/index.html
@@ -9,5 +9,9 @@
 	<h1><span id="first-name">Eric</span> <span id="last-name">Londres</span></h1>
 	
 	<h2>Developer, Videographer, Student</h2>
+
+	<div id="icons">
+	    <a href="https://gitlab.com/slondr"><i class="fab fa-gitlab"></i></a>
+	</div>
     </body>
 </html>
