--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,9 @@
 
 	<div id="icons">
 	    <a href="https://gitlab.com/slondr"><i class="fab fa-gitlab"></i></a>
+	    <a href="https://github.com/slondr"><i class="fab fa-github"></i></a>
+	    <a href="https://www.linkedin.com/in/eric-londres/"><i class="fab fa-linkedin"></i></a>
+	    <a href="mailto:ericlondres@outlook.com"><i class="fas fa-envelope"></i></a>
 	</div>
     </body>
 </html>
