--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
 	    <a href="https://gitlab.com/slondr"><i class="fab fa-gitlab"></i></a>
 	    <a href="https://github.com/slondr"><i class="fab fa-github"></i></a>
 	    <a href="https://www.linkedin.com/in/eric-londres/"><i class="fab fa-linkedin"></i></a>
+	    <a href="https://gitlab.com/slondr/Resume/raw/master/EricLondresResume.pdf?inline=false"><i class="fas fa-address-card"></i></a>
 	    <a href="mailto:ericlondres@outlook.com"><i class="fas fa-envelope"></i></a>
 	    <a href="https://twitter.com/slondrex/"><i class="fab fa-twitter"></i></a>
 	</div>
