--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
 	<title>Eric S. Londres</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="index.css"/>
 	<script src="https://kit.fontawesome.com/2fdf42f009.js" crossorigin="anonymous"></script>
     </head>
