--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
 	<title>Eric S. Londres</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="index.css"/>
-	<script src="https://kit.fontawesome.com/2fdf42f009.js" crossorigin="anonymous"></script>
+	<script async src="https://kit.fontawesome.com/2fdf42f009.js" crossorigin="anonymous"></script>
     </head>
     <body>
 	<h1><span id="first-name">Eric</span> <span id="last-name">Londres</span></h1>
@@ -15,7 +15,7 @@
 	    <a href="https://gitlab.com/slondr"><i class="fab fa-gitlab"></i></a>
 	    <a href="https://github.com/slondr"><i class="fab fa-github"></i></a>
 	    <a href="https://www.linkedin.com/in/eric-londres/"><i class="fab fa-linkedin"></i></a>
-	    <a href="https://slondr.gitlab.io/Resume/main.pdf"><i class="fas fa-address-card"></i></a>
+	    <a href="https://gitlab.com/slondr/Resume/-/raw/master/EricLondresResume.pdf"><i class="fas fa-address-card"></i></a>
 	    <a href="mailto:ericlondres@outlook.com"><i class="fas fa-envelope"></i></a>
 	    <a href="https://twitter.com/slondrex/"><i class="fab fa-twitter"></i></a>
 	</div>
