footer now looks nice

--- a/public/index.html
+++ b/public/index.html
@@ -21,9 +21,9 @@
 	</main>
 
 	<footer>
-	    <a href="/about">About</a>
-	    
-	    <a href="https://blog.ericlondr.es">Blog</a>
+	    <a class="nav" href="/about">About</a>
+	    <span id="guard">|</span>
+	    <a class="nav" href="https://blog.ericlondr.es">Blog</a>
 	</footer>
     </body>
 </html>
