add .html suffix to about link

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 	</main>
 
 	<footer>
-	    <a class="nav" href="/about">About</a>
+	    <a class="nav" href="/about.html">About</a>
 	    <span id="guard">|</span>
 	    <a class="nav" href="https://blog.ericlondr.es">Blog</a>
 	</footer>
