--- a/public/cyrillish/index.html
+++ b/public/cyrillish/index.html
@@ -2,6 +2,18 @@
 <html lang="en">
     <head>
 	<title>Cyrillish</title>
+	<style>
+	 body {
+	     display: flex;
+	     flex-direction: column;
+	     justify-content: center;
+	     align-items: center;
+	 }
+
+	 main {
+	     max-width: 72ch;
+	 }
+	</style>
 	<script lang="javascript">
 	 function convert() {
 	     let ipa = document.getElementById('input-ipa').value;
@@ -82,6 +94,7 @@
 		     case 'ʃ':
 			 cyrillish.push('ш');
 			 break;
+		     case 'ɜ':
 		     case 'ʌ':
 		     case 'ə':
 		     case 'u':
@@ -114,6 +127,8 @@
 		     case 'ð':
 			 cyrillish.push('ђ');
 			 break;
+		     case "ˈ":
+			 break;
 		     default:
 			 cyrillish.push(ipa[i]);
 			 if(ipa[i] != ' ' && ipa[i] != '.' && ipa[i] != ',') {
@@ -129,9 +144,11 @@
 	</script>
     </head>
     <body>
-	<span>Input IPA:</span>
-	<textarea id="input-ipa" oninput="convert()"></textarea>
-	<br/>
-	<span>Cyrillish:</span><div id="output-cyrillish"></div>
+	<main>
+	    <div>Input IPA:</div>
+	    <textarea id="input-ipa" oninput="convert()"></textarea>
+	    <br/>
+	    <span>Cyrillish:</span><div id="output-cyrillish"></div>
+	</main>
     </body>
 </html>
