--- a/public/cyrillish/index.html
+++ b/public/cyrillish/index.html
@@ -4,12 +4,21 @@
 	<title>Cyrillish</title>
 	<style>
 	 body {
+	     background-color: #282828;
+	     color: #fdde7e;
+	     font-size: 1.2em;
+	     
 	     display: flex;
 	     flex-direction: column;
 	     justify-content: center;
 	     align-items: center;
 	 }
 
+	 textarea {
+	     color: inherit;
+	     background-color: inherit;
+	 }
+	 
 	 main {
 	     max-width: 72ch;
 	 }
