--- a/public/about.html
+++ b/public/about.html
@@ -41,7 +41,7 @@
 	    <a href="https://t.me/slondr">Telegram</a>. If you aren't on Telegram
 	    (and you should be!), I'm also reachable on Matrix as
 	    <code>@slondr:matrix.org</code>, or
-	    <a href="mailto:ericlondres.outlook.com">via email</a>.
+	    <a href="mailto:ericlondres@outlook.com">via email</a>.
 	</p>
 
 	<p>
