add pixelfed link

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
 	    <a href="https://slondr.gitlab.io/Resume/EricLondresResume.pdf"><i class ="fas fa-address-card"></i></a>
 	    <a href="mailto:ericlondres@outlook.com"><i class="fas fa-envelope"></i></a>
 	    <a href="https://twitter.com/slondrex/"><i class="fab fa-twitter"></i></a>
+	    <a href="https://pixfed.com/slondr"><i class="fab fa-instagram"></i></a>
 	</main>
 
 	<footer>
