--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
 	    <a href="mailto:ericlondres@outlook.com"><i class="fas fa-envelope"></i></a>
 	    <a href="https://twitter.com/slondrex/"><i class="fab fa-twitter"></i></a>
 	    <a href="https://pixfed.com/slondr"><i class="fab fa-instagram"></i></a>
+	    <a href="https://koyu.space/web/accounts/215918#"><i class="fab fa-mastodon"></i></a>
 	</main>
 
 	<footer>
