fix syntax error

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 	    <a href="https://www.linkedin.com/in/eric-londres/"><i class="fab fa-linkedin"></i></a>
 	    <a href="https://slondr.gitlab.io/Resume/EricLondresResume.pdf"><i class ="fas fa-address-card"></i></a>
 	    <a href="mailto:ericlondres@outlook.com"><i class="fas fa-envelope"></i></a>
-	    <a href="/pubkey"><i class="fas fa-key"</i></a>
+	    <a href="/pubkey"><i class="fas fa-key"></i></a>
 	    <a href="https://twitter.com/slondrex/"><i class="fab fa-twitter"></i></a>
 	    <a href="https://pixfed.com/slondr"><i class="fab fa-instagram"></i></a>
 	    <a href="https://koyu.space/web/accounts/215918#"><i class="fab fa-mastodon"></i></a>
