added WIP notice on blog link

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
 	<footer>
 	    <a class="nav" href="/about.html">About</a>
 	    <span id="guard">|</span>
-	    <a class="nav" href="https://blog.ericlondr.es">Blog</a>
+	    <a class="nav" href="https://blog.ericlondr.es">Blog (WIP)</a>
 	</footer>
     </body>
 </html>
