--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,12 @@
      the Free Software Foundation, either version 3 of the License, or
      (at your option) any later version.
 
-     Foobar is distributed in the hope that it will be useful,
+     slondr.gitlab.io is distributed in the hope that it will be useful,
      but WITHOUT ANY WARRANTY; without even the implied warranty of
      MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
      GNU Affero General Public License for more details.
 
-     You should have received a copy of the Affero GNU General Public License
+     You should have received a copy of the GNU Affero General Public License
      along with slondr.gitlab.io.  If not, see <https://www.gnu.org/licenses/>.
 -->
 <!DOCTYPE html>
