--- a/public/cyrillish/index.html
+++ b/public/cyrillish/index.html
@@ -10,7 +10,7 @@
      MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
      GNU Affero General Public License for more details.
 
-     You should have received a copy of the Affero GNU General Public License
+     You should have received a copy of the GNU Affero General Public License
      along with slondr.gitlab.io.  If not, see <https://www.gnu.org/licenses/>.
 -->
 <!DOCTYPE html>
