update some things on the about page

--- a/public/about.html
+++ b/public/about.html
@@ -27,7 +27,7 @@
 	<p>
 	    I consider myself a programmer by career. You can see some of the code
 	    I've witten on <a href="https://GitLab.com/slondr">my GitLab page</a>;
-	    a few of my projects are also mirrored on
+	    a few (but not many) of my projects are also mirrored on
 	    <a href="https://GitHub.com/slondr">GitHub</a>. I'm currently in my
 	    third of four years as an undergraduate student at Stevens Institute
 	    of Technology.
@@ -55,8 +55,9 @@
 	<p>If you'd like to get in contact with me, I'd prefer you use
 	    <a href="https://t.me/slondr">Telegram</a>. If you aren't on Telegram
 	    (and you should be!), I'm also reachable on Matrix as
-	    <code>@slondr:matrix.org</code>, or
-	    <a href="mailto:ericlondres@outlook.com">via email</a>.
+	    <code>@slondr:privacytools.io</code>, or
+	    <a href="mailto:ericlondres@outlook.com">via email</a>. If you email me,
+	    please encrypt your email using <a href="/pubkey">my public GPG key</a>.
 	</p>
 
 	<p>
