--- a/public/about.html
+++ b/public/about.html
@@ -46,7 +46,7 @@
 
 	<p>
 	    I spend a great deal of my free time writing. I occasionally post
-	    on <a href="https://blog.ericlondr.es/">my blog</a>, but more often
+	    on <a href="https://blog.ericlondres.tech/">my blog</a>, but more often
 	    I am contributing articles or opinion pieces to
 	    <a href="https://thestute.com/author/elondres/">The Stute</a>, Stevens's
 	    student-run newspaper.
