--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
 	<footer>
 	    <a class="nav" href="/about.html">About</a>
 	    <span id="guard">|</span>
-	    <a class="nav" href="https://blog.ericlondr.es">Blog (WIP)</a>
+	    <a class="nav" href="https://blog.ericlondres.tech">Blog (WIP)</a>
 	</footer>
     </body>
 </html>
