update about page

--- a/public/about.html
+++ b/public/about.html
@@ -29,7 +29,7 @@
 	    I've witten on <a href="https://GitLab.com/slondr">my GitLab page</a>;
 	    a few (but not many) of my projects are also mirrored on
 	    <a href="https://GitHub.com/slondr">GitHub</a>. I'm currently in my
-	    third of four years as an undergraduate student at Stevens Institute
+	    final year as an undergraduate student at Stevens Institute
 	    of Technology.
 	</p>
 
