--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <body>
 	<h1><span id="first-name">Eric</span> <span id="last-name">Londres</span></h1>
 	
-	<h2>Developer, Videographer, Student</h2>
+	<h2>Computer Scientist</h2>
 	
 	<main id="icons">
 	    <a href="https://gitlab.com/slondr"><i class="fab fa-gitlab"></i></a>
